--- a/SpartaProjectWebApp/SpartaProjectWebApp/SpartaProjectWebApp.csproj
+++ b/SpartaProjectWebApp/SpartaProjectWebApp/SpartaProjectWebApp.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20201201215315_Linking_Products_and_Reviews.cs" />
+    <Compile Remove="Migrations\20201201215315_Linking_Products_and_Reviews.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.10">
